[gd_scene load_steps=85 format=3 uid="uid://dc4r0c3q4h1vo"]

[ext_resource type="Script" path="res://components/scripts/skeleton.gd" id="1_ug4iq"]
[ext_resource type="PackedScene" uid="uid://336wl2jspobc" path="res://scenes/miscellaneous/hitmarker.tscn" id="2_64tus"]
[ext_resource type="Texture2D" uid="uid://c7ypq8f8wdvlu" path="res://components/sprites/enemies/skeleton/skeleton_atk.png" id="2_lkymh"]
[ext_resource type="Texture2D" uid="uid://5sc13wn7j33m" path="res://components/sprites/enemies/skeleton/skeleton_damaged.png" id="3_spfhf"]
[ext_resource type="Texture2D" uid="uid://c12bybbikpkaw" path="res://components/sprites/enemies/skeleton/skeleton_dying.png" id="4_pey7m"]
[ext_resource type="Texture2D" uid="uid://bsk3u3mw8jwhn" path="res://components/sprites/enemies/skeleton/skeleton_idle.png" id="5_hg8k2"]
[ext_resource type="Texture2D" uid="uid://cev2rer2h8s10" path="res://components/sprites/enemies/skeleton/skeleton_parry.png" id="6_mhwow"]
[ext_resource type="Texture2D" uid="uid://dixtbmc0mg7ag" path="res://components/sprites/enemies/skeleton/skeleton_running.png" id="7_34yl5"]
[ext_resource type="Texture2D" uid="uid://bjuuqe4yn743t" path="res://components/sprites/enemies/skeleton/skeleton_soul_idle.png" id="8_jgj65"]
[ext_resource type="Texture2D" uid="uid://b17uvfkculiur" path="res://components/sprites/enemies/skeleton/skeleton_soul_spawning.png" id="9_vjrex"]
[ext_resource type="Texture2D" uid="uid://biqmbnmpa1vxs" path="res://components/sprites/GUI/status_alert/buff_animation.png" id="10_6xpb4"]
[ext_resource type="Texture2D" uid="uid://cixwjw2tvf78u" path="res://components/sprites/GUI/status_alert/debuff_animation.png" id="11_apkbl"]
[ext_resource type="Texture2D" uid="uid://da0dj4l15d4d5" path="res://components/sprites/GUI/status_alert/recover_animation.png" id="12_3bvs5"]
[ext_resource type="Texture2D" uid="uid://cpontr05v0kat" path="res://components/sprites/default_atk.png" id="13_qvr52"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xk3h6"]
atlas = ExtResource("2_lkymh")
region = Rect2(0, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_vopfs"]
atlas = ExtResource("2_lkymh")
region = Rect2(960, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gcbj"]
atlas = ExtResource("2_lkymh")
region = Rect2(0, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjdxs"]
atlas = ExtResource("2_lkymh")
region = Rect2(960, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4p34"]
atlas = ExtResource("3_spfhf")
region = Rect2(0, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngx2v"]
atlas = ExtResource("3_spfhf")
region = Rect2(0, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2g0v"]
atlas = ExtResource("4_pey7m")
region = Rect2(0, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvbua"]
atlas = ExtResource("4_pey7m")
region = Rect2(960, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_pajbm"]
atlas = ExtResource("4_pey7m")
region = Rect2(0, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5q6c"]
atlas = ExtResource("4_pey7m")
region = Rect2(960, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5kff"]
atlas = ExtResource("5_hg8k2")
region = Rect2(0, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ql1f"]
atlas = ExtResource("5_hg8k2")
region = Rect2(0, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y1wt"]
atlas = ExtResource("6_mhwow")
region = Rect2(960, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_n014q"]
atlas = ExtResource("6_mhwow")
region = Rect2(0, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmq40"]
atlas = ExtResource("7_34yl5")
region = Rect2(0, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnqmy"]
atlas = ExtResource("7_34yl5")
region = Rect2(960, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_35sxf"]
atlas = ExtResource("7_34yl5")
region = Rect2(0, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjkpa"]
atlas = ExtResource("7_34yl5")
region = Rect2(960, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg776"]
atlas = ExtResource("8_jgj65")
region = Rect2(0, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uagq"]
atlas = ExtResource("8_jgj65")
region = Rect2(960, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcses"]
atlas = ExtResource("8_jgj65")
region = Rect2(0, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7qhf"]
atlas = ExtResource("8_jgj65")
region = Rect2(960, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgrl8"]
atlas = ExtResource("8_jgj65")
region = Rect2(0, 1920, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp3wb"]
atlas = ExtResource("9_vjrex")
region = Rect2(0, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_evljq"]
atlas = ExtResource("9_vjrex")
region = Rect2(960, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0f4a"]
atlas = ExtResource("9_vjrex")
region = Rect2(0, 960, 960, 960)

[sub_resource type="SpriteFrames" id="SpriteFrames_7kgit"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk3h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vopfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gcbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjdxs")
}],
"loop": false,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4p34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngx2v")
}],
"loop": false,
"name": &"damaged",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2g0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvbua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pajbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5q6c")
}],
"loop": false,
"name": &"dying",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5kff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ql1f")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y1wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n014q")
}],
"loop": false,
"name": &"parry",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmq40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnqmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35sxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjkpa")
}],
"loop": true,
"name": &"running",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg776")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uagq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcses")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7qhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgrl8")
}],
"loop": true,
"name": &"soul_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp3wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evljq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0f4a")
}],
"loop": false,
"name": &"soul_spawning",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4uuxm"]
atlas = ExtResource("10_6xpb4")
region = Rect2(0, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bkqm"]
atlas = ExtResource("10_6xpb4")
region = Rect2(1764, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8522"]
atlas = ExtResource("10_6xpb4")
region = Rect2(3528, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh1f5"]
atlas = ExtResource("10_6xpb4")
region = Rect2(0, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_800lp"]
atlas = ExtResource("10_6xpb4")
region = Rect2(1764, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5753"]
atlas = ExtResource("10_6xpb4")
region = Rect2(3528, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f3jk"]
atlas = ExtResource("10_6xpb4")
region = Rect2(0, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyb8m"]
atlas = ExtResource("10_6xpb4")
region = Rect2(1764, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc3fx"]
atlas = ExtResource("10_6xpb4")
region = Rect2(3528, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_66f3u"]
atlas = ExtResource("10_6xpb4")
region = Rect2(0, 5292, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f0g6"]
atlas = ExtResource("10_6xpb4")
region = Rect2(1764, 5292, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4byr"]
atlas = ExtResource("11_apkbl")
region = Rect2(0, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtkey"]
atlas = ExtResource("11_apkbl")
region = Rect2(1764, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifvtr"]
atlas = ExtResource("11_apkbl")
region = Rect2(3528, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3mol"]
atlas = ExtResource("11_apkbl")
region = Rect2(0, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_im352"]
atlas = ExtResource("11_apkbl")
region = Rect2(1764, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rhfn"]
atlas = ExtResource("11_apkbl")
region = Rect2(3528, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_iagy6"]
atlas = ExtResource("11_apkbl")
region = Rect2(0, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_f630m"]
atlas = ExtResource("11_apkbl")
region = Rect2(1764, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nj0r"]
atlas = ExtResource("11_apkbl")
region = Rect2(3528, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1wdv"]
atlas = ExtResource("11_apkbl")
region = Rect2(0, 5292, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_jimrb"]
atlas = ExtResource("11_apkbl")
region = Rect2(1764, 5292, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qn0j"]
atlas = ExtResource("12_3bvs5")
region = Rect2(0, 0, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhx6m"]
atlas = ExtResource("12_3bvs5")
region = Rect2(1248, 0, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjta2"]
atlas = ExtResource("12_3bvs5")
region = Rect2(2496, 0, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt2x7"]
atlas = ExtResource("12_3bvs5")
region = Rect2(3744, 0, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp7xq"]
atlas = ExtResource("12_3bvs5")
region = Rect2(0, 1760, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbqni"]
atlas = ExtResource("12_3bvs5")
region = Rect2(1248, 1760, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkuak"]
atlas = ExtResource("12_3bvs5")
region = Rect2(2496, 1760, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3o8n"]
atlas = ExtResource("12_3bvs5")
region = Rect2(3744, 1760, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6vsw"]
atlas = ExtResource("12_3bvs5")
region = Rect2(0, 3520, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_o52ho"]
atlas = ExtResource("12_3bvs5")
region = Rect2(1248, 3520, 1248, 1760)

[sub_resource type="SpriteFrames" id="SpriteFrames_tfo0k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uuxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bkqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8522")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh1f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_800lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5753")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f3jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyb8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc3fx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66f3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f0g6")
}],
"loop": false,
"name": &"buff",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4byr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtkey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifvtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3mol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im352")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rhfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iagy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f630m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nj0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1wdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jimrb")
}],
"loop": false,
"name": &"debuff",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qn0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhx6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjta2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt2x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp7xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbqni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkuak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3o8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6vsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o52ho")
}],
"loop": false,
"name": &"recover",
"speed": 25.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uwkny"]
radius = 13.3233
height = 74.1723

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0p46"]
bg_color = Color(0.219608, 0.219608, 0.219608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdg0j"]
bg_color = Color(1, 0, 0.0352941, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_y6mgf"]
radius = 818.022

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kr4ka"]
size = Vector2(63.5, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_pal7e"]
atlas = ExtResource("13_qvr52")
region = Rect2(0, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk2o1"]
atlas = ExtResource("13_qvr52")
region = Rect2(960, 0, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m4ka"]
atlas = ExtResource("13_qvr52")
region = Rect2(0, 960, 960, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uble"]
atlas = ExtResource("13_qvr52")
region = Rect2(960, 960, 960, 960)

[sub_resource type="SpriteFrames" id="SpriteFrames_g7j7j"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pal7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk2o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m4ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uble")
}],
"loop": false,
"name": &"effect",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="SkeletonEnemy" type="CharacterBody2D"]
process_mode = 1
y_sort_enabled = true
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ug4iq")
damage_node = ExtResource("2_64tus")

[node name="Hitmarker_spawn" type="Marker2D" parent="."]
position = Vector2(0, -59)

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7.15256e-07, 3)
scale = Vector2(0.128125, 0.128125)
sprite_frames = SubResource("SpriteFrames_7kgit")
animation = &"idle"
autoplay = "idle"

[node name="Status_alert_sprite" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(2, 17)
scale = Vector2(0.0564768, 0.0564768)
sprite_frames = SubResource("SpriteFrames_tfo0k")
animation = &"idle"
autoplay = "idle"

[node name="Body_collider" type="CollisionShape2D" parent="."]
position = Vector2(-1, 16)
rotation = 0.279253
shape = SubResource("CapsuleShape2D_uwkny")
debug_color = Color(1, 1, 0, 0.0666667)

[node name="Stun" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 2
y_sort_enabled = true
offset_left = -50.0
offset_top = -57.0
offset_right = 48.0
offset_bottom = -38.0
theme_override_styles/background = SubResource("StyleBoxFlat_x0p46")
theme_override_styles/fill = SubResource("StyleBoxFlat_vdg0j")
max_value = 150.0
rounded = true
show_percentage = false

[node name="GrabTime" type="Timer" parent="."]
wait_time = 0.365
one_shot = true

[node name="Area_of_detection" type="Area2D" parent="."]
visible = false

[node name="Collider" type="CollisionShape2D" parent="Area_of_detection"]
visible = false
shape = SubResource("CircleShape2D_y6mgf")
debug_color = Color(0, 0.6, 0.701961, 0.0352941)

[node name="Basic_atk_Area" type="Area2D" parent="."]

[node name="Skill_collider" type="CollisionShape2D" parent="Basic_atk_Area"]
visible = false
position = Vector2(40.25, 16)
shape = SubResource("RectangleShape2D_kr4ka")
debug_color = Color(1, 0, 0, 0.0784314)

[node name="Effect" type="AnimatedSprite2D" parent="Basic_atk_Area"]
position = Vector2(49, 12)
scale = Vector2(0.0875, 0.133333)
sprite_frames = SubResource("SpriteFrames_g7j7j")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="Inhale_time" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Basic_atk_Cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Parry_Cooldown" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Update_Atk" type="Timer" parent="."]
wait_time = 2.245
one_shot = true
autostart = true

[node name="Soul_delay_time" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Soul_respawn_time" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 71.3
target_desired_distance = 100.0
path_max_distance = 1000.0
navigation_layers = 3
avoidance_enabled = true
radius = 20.0
max_neighbors = 20
max_speed = 1703.04

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="Status_alert_sprite" to="." method="_on_status_alert_sprite_animation_finished"]
[connection signal="timeout" from="Stun" to="." method="_on_stun_timeout"]
[connection signal="timeout" from="GrabTime" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area_of_detection" to="." method="_on_area_of_detection_body_entered"]
[connection signal="body_exited" from="Area_of_detection" to="." method="_on_area_of_detection_body_exited"]
[connection signal="body_entered" from="Basic_atk_Area" to="." method="_on_basic_atk_area_body_entered"]
[connection signal="body_exited" from="Basic_atk_Area" to="." method="_on_basic_atk_area_body_exited"]
[connection signal="animation_finished" from="Basic_atk_Area/Effect" to="." method="_on_effect_animation_finished"]
[connection signal="timeout" from="Inhale_time" to="." method="_on_inhale_time_timeout"]
[connection signal="timeout" from="Update_Atk" to="." method="_on_update_atk_timeout"]
[connection signal="timeout" from="Soul_delay_time" to="." method="_on_soul_delay_time_timeout"]
[connection signal="timeout" from="Soul_respawn_time" to="." method="_on_soul_respawn_time_timeout"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
